--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 -- tables
 CREATE TABLE Persons
 (
-    Personid int NOT NULL AUTO_INCREMENT primary key,
+    personId int NOT NULL AUTO_INCREMENT primary key,
     LastName varchar(255) NOT NULL,
     FirstName varchar(255),
     Age int,
@@ -91,7 +91,16 @@ alter table security_roles_access
         </textarea>
     </div>
     <div class="canvas">
-        
+        <svg id="canvas" width="100%" height="100%" >
+            <g transform="translate(20, 20)">
+                <rect id="yeet" x="0" y="0" width="100" height="100" fill="red"></rect>
+                <text x="0" y="50" font-family="Verdana" font-size="35" fill="blue">Hello</text>
+            </g>
+            <rect x="0" y="0" width="30" height="20" fill="#fafafa"/>
+            <rect x="4" y="5" width="8" height="10" fill="#007bff"/>
+            <rect x="18" y="5" width="8" height="10"   fill="#888"/>
+        </svg>
+
     </div>
 </body>
 </html>
