--- a/src/logical.html
+++ b/src/logical.html
@@ -6,7 +6,7 @@
     <title>diagram-generator</title>
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <script src="logical.js"></script>
 </head>
 
 <body>
@@ -211,7 +211,7 @@ create table warenkorb_position
             <text x="30" y="20">1..*</text>
             <text x="480" y="470">1</text>
         </svg>
-        <button onclick="download()">download</button>
+        <button onclick="download()" disabled>download</button>
     </div>
 </body>
 
