--- a/src/conseptual.html
+++ b/src/conseptual.html
@@ -13,7 +13,68 @@
     <div class="editor">
         <button onclick="drawClasses()">reload</button>
         <textarea id="editor" cols="30" rows="50" spellcheck="false">
-
+Kunde	
+ Vorname
+ Name
+ Passwort
+ Email
+ Sprache
+ Wohnort
+ PLZ
+ Strasse
+ Strassen Nr.
+ Email-Benachrichtigung
+ Post-Benachrichtigung
+Auftrag	
+ Kunde
+ Auftragsstatus
+ zahlungsart
+Auftragsposition	
+ Auftrag
+ Artikel
+ Verkaufspreis
+ Versendet
+Zahlungsart	
+ Bezeichnung
+ Rechnungsauslösung
+Auftragsstatus	
+ Zustand
+Warenkorb	
+ Kunde
+Warenkorbpositionen	
+ Warenkorb
+ Artikel
+Artikel	
+ Bezeichnung
+ Artikelnummer
+ Bestand
+ Sichtbar
+ Artikeluntergruppe
+ Verkaufspreis
+ Einkaufspreis
+ Marke
+ Gewicht
+ Bild
+ Herstellerlink
+Artikelattribute	
+ Bezeichnung
+ Wert
+ Artikel
+Artikelbewertung	
+ Artikel
+ Note
+ Kommentar
+Artikelhauptgruppe
+ Name
+ bezeichung
+Artikeluntergruppe	
+ Name
+ bezeichung
+ Artikelhauptgruppe
+Übersetzung	
+ Deutsch
+ Englisch
+ Französisch
         </textarea>
     </div>
     <div class="canvas">
